# oracle

./: .gitignore  LICENSE  README.adoc  README.md  env-sample  requirements.txt  start_oracle_server_dev.sh
.github/workflows/: build_test.yml
dlc-playground/: Cargo.toml  README.md
dlc-playground/src/: adaptor_flow.rs  crypto.rs  full_flow.rs  main.rs
dlccryptlib_oracle/: Cargo.toml  README.md  sample_secret.sec  save_secret.py  test_lib.py  test_lib_c.py
dlccryptlib_oracle/src/: lib.rs
dlcplazacryptlib/: .gitignore  Cargo.toml  requirements.txt  save_secret.py  test_lib.py  test_lib_c.py
dlcplazacryptlib/src/: adaptor_signature.rs  hd_wallet_storage.rs  lib.rs  lib_struct.rs  network.rs  parse.rs  secret_entropy_storage.rs  test_lib.rs
public/: index.html  script.js  style.css
public/demo/: index.html
public_demo/: index.html
server/: __fill_db.py  __setup_db.py  db.py  db_infra.py  dto.py  main.py  oracle.py  price.py  price_binance.py  price_bitstamp.py  price_coinbase.py  price_common.py  price_kraken.py  test_api.py  test_api_local.py  test_api_manual.py  test_common.py  test_db.py  test_dto.py  test_event.py  test_oracle.py  test_util.py  util.py
testdata/: dummy_test_secret.sec
