[package]
name = "dlcplazacryptlib"
version = "0.2.0"
edition = "2021"

[lib]
name = "dlcplazacryptlib"
crate-type = ["cdylib"]

[dependencies]
bip39 = "2.1.0"
bitcoin = "0.32.4"
pyo3 = { version = "0.23.1", optional = true }
secp256k1-sys = "0.10.1"
secp256k1-zkp = "0.11.0"

[features]
default = ["std", "with-pyo3"]
std = ["bitcoin/std", "secp256k1-zkp/rand-std"]
with-pyo3 = ["pyo3"]
